@@ -81,7 +81,9 @@ Additions:
     * Ecore_x: Add manual render code before deiconify
     * Eeze: Add a dummy libmount replacement for when libmount is not there.
     * Ecore_Con: Add systemd socket activation support (ECORE_CON_SOCKET_ACTIVATE).
-    * Ecore: notify systemd that we are ready as soon as the main loop is running.
+    * Ecore:
+     - notify systemd that we are ready as soon as the main loop is running.
+     - automatically support Watchdog.
     * ecore_imf: Add ecore_imf_context_input_panel_layout_variation_set/get API
     * Add edje_object_part_text_input_panel_layout_variation_set/get API
 
